# kaime

./: .gitignore  README.md  pyproject.toml
alembic/versions/: 7d61bf53d079_change_description_field_to_body.py  b7d49de2f7da_make_other_names_field_optional.py  d09c9b5f28ee_create_mock_subs_and_events_tables.py
app/: dependencies.py  main.py  models.py  schemas.py  utils.py
app/core/: config.py  security.py  session.py
app/repositories/: academic_repository.py  notification_repository.py
app/routers/: events.py  users.py  (+1 more)
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d2a3aaf3e68_create_user_table.py  6762ef53f645_create_db_and_tables.py  8b6f31f2d7c1_add_notification_dispatch_tracking.py  d09c9b5f28ee_create_mock_subs_and_events_tables.py
backend/app/: config.py  dependencies.py  main.py  models.py  notifications.py  schemas.py  utils.py
backend/app/core/: config.py  session.py
backend/app/repositories/: academic_repository.py
backend/app/routers/: events.py  subscribers.py
backend/app/services/: academic_service.py  base.py  notification_service.py  user_base.py  user_notifications.py  user_service.py
backend/app/templates/: announcement.html  exam_reminder.html  registration_closing.html  upcoming_event_reminder.html
backend/app/templates/user-email-templates/: mail_email_verify.html
backend/frontend/: package-lock.json
backend/frontend/src/: App.tsx  api.ts  main.tsx
backend/frontend/src/components/: EventsView.tsx  SubscribersView.tsx
frontend/: index.html  package-lock.json
(+26 files in other folders)
