[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.10.4",
    "fastapi-mail>=1.6.5",
    "fastapi[standard]>=0.139.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.39",
]
